--- a/useraccount.resx
+++ b/useraccount.resx
@@ -151,7 +151,39 @@
         wgkMGuU7H+c2LmOMf7H7vrWaNpRSn4X2DKUQ0M+uAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="Guna2CircleButton1.HoverState.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAGtSURBVEhL7ZTNK0RhFMZnTPPVNDGlrMUshCJl4SOJDf+D/0JZWBD/g5JkpZRElNUsLGyUjWLU
+        hI2FBoNokpLxe+99riZz752JWc5TT+e+z3nOOe97vwIN/BfBaDQ6HYvFNok54hPxAWYjkcg6cUq+2kDB
+        TTweHzbXNOim4QlaqQqPYafVoBpUUISz8E3rPIOWwuFwfyKRaMOWYngXnCN3L88rGxuyu/hAZsMvxX3k
+        FjvrihSePeNlEwXYLt0daurwk4JJpfwQwrutmow0d8hUziJDJpT2gzlJ3tTgH5VWCQy3alzOK6V9wTNZ
+        kH9NUn3BSzCgAeeS6o4Qt+eUAbtaV4LkITzjMmQrdQbNs7DEcfsk1Rc8qA0zgDgvyRd4c8b/i94vBfdw
+        XKY7ls226g2+3hG8zhf/Q6XdgeHImBi2xbLJVr3B7RzE/+E0N1TKHRg64LPMO0iev4pkMtmK50Be5/fi
+        P8Cg/Og8j0dOs0zsIRWBMa570RbJW18vfOEkM2gFs7aaVAPGNDS/YmtXPszAtKnRxq6tBrVCRSvwEr6L
+        F3CVHY9hCdrOBv6EQOAbRgeCkFSjuxoAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="Guna2CircleButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAGpSURBVEhL7VW7SgNBFN2ghfhCECysLNTCQlCw8wHi45OshCAo/oIQGwUbESzEQrAIFv6BLxBr
+        SdZAwu7M5sF4bjiBkdmMRlNY5MBhZ+4998xwZ3c26OHPqGm9XVfquKbUC57FutYfeL6BJ8htGmMylHYG
+        kyRzMLkHzTfMG62nWRY04niHw/bAbtfqcVyiwTvm2WoULZlKZcJE0STmy+ABciE1IWNZmdMmHdjNLNsg
+        hWdowRBTDpAbheaaWsWnfwEI8k2h1uc/6S80/Q2lnlrm3gXk0CgqyO4Y9qLVFptMuUAyJwLsaJchL9LM
+        hUy7QMGzCJIkmWeou4B5RRYAhhn6P8CmRtiiMkPdBb6TBVkAbX5kyAV38IV4sw6Z9sI68COGXNjGQili
+        ygtTKo1BX2TNOsMubPOG1g/oax9TbQFNBh/lBetuGU5Hy7wWx5rjKzk8ph2Ycnkcd9YltaF96aWiaY62
+        gKvWfSQX2T4OcRGLDYCDcvEhtmdpipiv0KY9xJxDufRmUHhHAx9vjFJTLOsM0l+8RVswOQXlJ1MFpX2v
+        YA65DUp7+C2C4BPVWlEAoQvgjgAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="NetResize1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>129, 17</value>
+  </metadata>
+  <metadata name="BackgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>271, 17</value>
   </metadata>
 </root>
